- added config params TODO: - add listener to stdin - create tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,6 +13,11 @@ akka {
   #log-config-on-start = true
 }
 
+#Milliseconds to conflate running stats
+app.throttling.rate = 1000
+#Async request for statistics timeout limitation (ms)
+app.request.timeout = 3000
+
 ## Secret key
 play.http.secret.key = "ctfVRf4e_u;mZTTVNb1>W7?:l<ALhi:Y]p@r3CGV1FjL4rR2KnaZCelAFBaf;iS6"
 play.http.secret.key = ${?PLAY_APP_SECRET}
