- added config for fast and slow producer TODO: - create tests - WHY conflate doesn't work with keep-alive ?

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,22 +1,9 @@
-## Akka
-akka {
-  # "akka.log-config-on-start" is extraordinarly useful because it log the complete
-  # configuration at INFO level, including defaults and overrides, so it s worth
-  # putting at the very top.
-  #
-  # Put the following in your conf/logback.xml file:
-  #
-  # <logger name="akka.actor" level="INFO" />
-  #
-  # And then uncomment this line to debug the configuration.
-  #
-  #log-config-on-start = true
-}
-
 #Milliseconds to conflate running stats
-app.throttling.rate = 100
+app.throttling.rate = 150
 #Async request for statistics timeout limitation (ms)
 app.request.timeout = 3000
+#Build regular pipelane or conflated (allowing for fast independent producer)
+app.design.fast-producer=true
 
 ## Secret key
 play.http.secret.key = "ctfVRf4e_u;mZTTVNb1>W7?:l<ALhi:Y]p@r3CGV1FjL4rR2KnaZCelAFBaf;iS6"
@@ -34,32 +21,3 @@ play.i18n {
   langs = [ "en" ]
 }
 
-## Play HTTP settings
-# ~~~~~
-play.http {
-  ## Router
-  # https://www.playframework.com/documentation/latest/JavaRouting
-  # https://www.playframework.com/documentation/latest/ScalaRouting
-  # ~~~~~
-  # Define the Router object to use for this application.
-  # This router will be looked up first when the application is starting up,
-  # so make sure this is the entry point.
-  # Furthermore, it's assumed your route file is named properly.
-  # So for an application router like `my.application.Router`,
-  # you may need to define a router file `conf/my.application.routes`.
-  # Default to Routes in the root package (aka "apps" folder) (and conf/routes)
-  #router = my.application.Router
-
-  ## Action Creator
-  # https://www.playframework.com/documentation/latest/JavaActionCreator
-  # ~~~~~
-  #actionCreator = null
-
-  ## ErrorHandler
-  # https://www.playframework.com/documentation/latest/JavaRouting
-  # https://www.playframework.com/documentation/latest/ScalaRouting
-  # ~~~~~
-  # If null, will attempt to load a class called ErrorHandler in the root package,
-  #errorHandler = null
-
-}
