- added tests for fast and slow modes - added readme TODO:   - add controller test   - check runtime params for switching mode

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,9 +1,10 @@
 #Milliseconds to conflate running stats
-app.throttling.rate = 150
+app.throttling.rate = 1000
 #Async request for statistics timeout limitation (ms)
 app.request.timeout = 3000
 #Build regular pipelane or conflated (allowing for fast independent producer)
 app.design.fast-producer=true
+app.design.fast-producer=${?FAST_PRODUCER}
 
 ## Secret key
 play.http.secret.key = "ctfVRf4e_u;mZTTVNb1>W7?:l<ALhi:Y]p@r3CGV1FjL4rR2KnaZCelAFBaf;iS6"
