- added controller test

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,7 +3,7 @@ app.throttling.rate = 1000
 #Async request for statistics timeout limitation (ms)
 app.request.timeout = 3000
 #Build regular pipelane or conflated (allowing for fast independent producer)
-app.design.fast-producer=true
+app.design.fast-producer=false
 app.design.fast-producer=${?FAST_PRODUCER}
 
 ## Secret key
